--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,5 +46,6 @@
       "@utilities": ["src/utilities/index.ts"]
     }
   },
-  "include": ["src/**/*.ts", "configs/**/*.ts"]
+  "include": ["src", "configs/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
