fix: webpack error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,13 +25,12 @@
     "forceConsistentCasingInFileNames": true,
 
     "outDir": "./dist",
-    "noEmit": true,
+    "noEmit": false,
     "sourceMap": true,
 
     "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "allowImportingTsExtensions": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
