--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bygram-server",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "npm run build && node ./dist/bundle.js",
     "dev": "nodemon --config ./configs/nodemon.json ./src/index.ts",
     "ts-node": "npx ts-node ./src/index.ts",
-    "build": "npx webpack --config ./configs/webpack.config.ts",
+    "build": "npx webpack --config ./configs/webpack.config.mjs",
     "build-tsc": "tsc",
     "test": "jest --watch --config=./configs/jest.config.ts",
     "coverage": "jest --coverage --watchAll --config=./configs/jest.config.ts"
