--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "bygram-server",
-  "type": "module",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/bundle.js",
+    "start": "npm run build && node ./dist/bundle.js",
     "dev": "nodemon --config ./configs/nodemon.json ./src/index.ts",
     "ts-node": "npx ts-node ./src/index.ts",
     "build": "npx webpack --config ./configs/webpack.config.mjs",
